--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "http://firsnameisoy.github.io/docs/index.html"
+baseurl = "http://firstnameisoy.github.io/docs/index.html"
 themesDir = "/Users/hwang_soyeon/Documents/Tribeca/firstnameisoy.github.io/themes"
 languageCode = "en-us"
 title = "Hugo Cactus Theme"
