--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 
-baseURL: "http://firsnameisoy.github.io/docs/index.html"
+baseURL: "http://firstnameisoy.github.io/docs/index.html"
 title: "My Hugo Site"
 footnoteReturnLinkContents: "↩"
 permalinks:
